[tool.poetry]
name = "krangler"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
luigi = "^3.0.3"
plumbum = "^1.7.2"
pydantic = "^1.9.1"
requests = "^2.27.1"
atomicwrites = "^1.4.0"
ndjson = "^0.3.1"
zstandard = "^0.17.0"
SQLAlchemy = "^1.4.37"
pyooz = "^0.0.5"
rich = "^12.4.4"
psycopg2-binary = "^2.9.3"
lmdb = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"

[tool.poetry.scripts]
krangler = "krangler.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
