[tool.poetry]
name = "krangler"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
luigi = "^3.0.3"
plumbum = "^1.7.2"
pydantic = "^2.5.2"
requests = "^2.27.1"
atomicwrites = "^1.4.0"
ndjson = "^0.3.1"
zstandard = "^0.17.0"
SQLAlchemy = "^1.4.37"
pyooz = "^0.0.5"
rich = "^12.4.4"
psycopg2-binary = "^2.9.3"
lmdb = "^1.3.0"
numpy = "^1.22.4"
protobuf = "^4.25.0"
psycopg = {extras = ["binary", "pool"], version = "^3.1.13"}
pydantic-settings = "^2.1.0"
more-itertools = "^10.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"

[tool.poetry.scripts]
krangler = "krangler.cli:main"
populate_pool = "krangler.scripts.populate_pool:main"
upload_appinfos = "krangler.scripts.upload_appinfos:main"
upload_csv = "krangler.cli:upload_csv_main"
depot_ls = "krangler.scripts.depot_ls:main"
ggpk_ls = "krangler.scripts.ggpk_ls:main"
ggpk_decompose = "krangler.scripts.ggpk_decompose:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
